# neovim-plugins

./: .gitignore  README.md  pyproject.toml
aichat/lua/: aichat.lua
aichat/rplugin/python3/: aichat.py
aichat/rplugin/python3/tests/: writer_test.py
jiraplugin/lua/: jiraplugin.lua
jiraplugin/rplugin/python3/: jiraplugin.py
jiraplugin/rplugin/python3/tests/: comment_test.py
opensearchplugin/lua/: opensearchplugin.lua
opensearchplugin/rplugin/python3/: opensearchplugin.py
