[project]
name = "neovim-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botocore>=1.40.21",
    "nest-asyncio>=1.6.0",
    "opensearch-py>=3.0.0",
    "pynvim>=0.5.2",
    "requests-aws4auth>=1.3.1",
    "yaar>=0.1.0",
]

[tool.uv.sources]
yaar = { path = '../yaar' }
